@@ -29,7 +29,7 @@ public class BlackboardDisplayTarget extends DisplayTarget {
             if (!parseText(text.get(0).getString(), tile)) {
                 ItemStack copyStack = CreateCompatImpl.getDisplayedItem(context, source, i -> i.getItem() instanceof BlackboardItem);
                 if (!copyStack.isEmpty() && copyBlackboard(line, context, te, tile, copyStack)) return;
-                var pixels = CommonConfigs.Building.BLACKBOARD_COLOR.get() ? BlackboardData.unpackPixelsFromString(text.get(0).getString()) : BlackboardBlockTile.unpackPixelsFromStringWhiteOnly(text.get(0).getString());
+                var pixels = CommonConfigs.Building.BLACKBOARD_COLOR.get() ? BlackboardData.unpackPixelsFromString(text.getFirst().getString()) : BlackboardData.unpackPixelsFromStringWhiteOnly(text.getFirst().getString());
                 tile.setPixels(BlackboardData.unpackPixels(pixels));
             }
             context.level().sendBlockUpdated(context.getTargetPos(), te.getBlockState(), te.getBlockState(), 2);
